--- a/ToDoList/Views/ToDo/Delete.cshtml
+++ b/ToDoList/Views/ToDo/Delete.cshtml
@@ -19,6 +19,14 @@
             @Html.DisplayFor(model => model.Content)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Status)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
