Add days required and deadline properties

--- a/ToDoList/Views/ToDo/Details.cshtml
+++ b/ToDoList/Views/ToDo/Details.cshtml
@@ -26,6 +26,21 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.DaysRequired)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DaysRequired)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Deadline)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Deadline)
+        </dd>
     </dl>
 </div>
 <p>
