--- a/ToDoList/Views/ToDo/Index.cshtml
+++ b/ToDoList/Views/ToDo/Index.cshtml
@@ -17,6 +17,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DaysRequired)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Deadline)
+        </th>
         <th></th>
     </tr>
 
@@ -27,6 +33,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Status)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DaysRequired)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Deadline)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
